--- a/webview-ui/src/components/TranslationNoteScroller.css
+++ b/webview-ui/src/components/TranslationNoteScroller.css
@@ -1,20 +1,23 @@
-#notePosition {
-  width: "100%";
-  margin-bottom: "20px";
+#note-position {
+  width: 100%;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
-.columnContainer {
-  display: "flex";
-  width: "100%";
+.column-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
 
-.arrowButton {
-  flex-basis: "5%";
+.arrow-button {
+  flex-basis: 5%;
   flex-grow: 0;
   flex-shrink: 0;
+  font: normal normal normal 26px/1 codicon;
 }
 
 #note-container {
   flex-grow: 1;
-  text-align: "center";
+  text-align: center;
 }
