--- a/webview-ui/src/css/styles.css
+++ b/webview-ui/src/css/styles.css
@@ -931,3 +931,350 @@ main modal. They basically override bootstrap styling for these components
     border: 2px solid var(--reverse-color);
     outline: none;
 }
+
+
+/*
+fix for missing styles for checker
+ */
+
+
+.panes-container {
+   flex: 1;
+   display: flex;
+   overflow-x: auto;
+}
+
+.pane-container {
+    min-height: 130px;
+    flex: 1;
+    display: flex;
+    min-width: 240px;
+    flex-direction: column;
+    border-right: 1px solid var(--border-color);
+}
+
+.pane-title-container-ltr {
+    flex: 0 0 35px;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 15px 5px 15px;
+}
+
+.pane-title-container-rtl {
+    flex: 0 0 35px;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 15px 5px 15px;
+}
+
+.pane-title-container-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.pane-title-text {
+    font-weight: 700;
+    font-size: 1em;
+    margin-bottom: -5px;
+}
+
+.pane-subtitle-text {
+    color: var(--text-color-light);
+    font-style: bold;
+    font-family: noto sans;
+}
+
+.verse-content-container-ltr {
+    overflow-y: auto;
+    direction: ltr;
+    padding: 0 15px 10px;
+}
+
+.verse-content-container-rtl {
+    overflow-y: auto;
+    direction: rtl;
+    padding: 0 15px 10px;
+}
+
+.remove-glyph-icon {
+    color: var(--text-color-light);
+    cursor: pointer;
+}
+
+.verse-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.verse-content-ltr {
+    flex: 1;
+    direction: ltr;
+    padding: 0px 0px 15px;
+}
+
+.verse-content-rtl {
+    flex: 1;
+    direction: rtl;
+    padding: 0px 0px 15px;
+}
+
+.placeholder-text {
+    font-style: italic;
+}
+
+.handleIcon {
+    z-index: 999;
+    color: var(--reverse-color);
+    background-color: var(--text-color-dark);
+    padding: 10px 0px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.linkActive {
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bold;
+    margin: 5px 20px;
+    cursor: pointer;
+}
+
+.linkInactive {
+    display: none;
+    font-weight: bold;
+    margin: 5px 20px;
+    text-align: right;
+    cursor: default;
+}
+
+.checkInfo {
+    flex: 0 0 120px;
+    display: flex;
+    margin: 0 10px;
+    color: var(--reverse-color);
+    background-color: var(--accent-color-dark);
+    box-shadow: 0 3px 10px var(--background-color);
+    border-radius: 2px;
+}
+
+.leftSide {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rightSide {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 10px;
+    border-left: 1px solid var(--reverse-color);
+}
+
+.title {
+    max-height: 100px;
+    overflow-y: auto;
+    padding: 0 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.phrase {
+    max-height: 80px;
+    overflow-y: auto;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.phrase a,
+.phrase a:active,
+.phrase a:link,
+.phrase a:visited {
+    color: #3FB7FA;
+    white-space: nowrap;
+}
+
+.phrase a:hover {
+    color: #3FB7FA;
+    text-decoration: underline;
+}
+
+.actions-area {
+    flex: 0 0 55px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.selection-actions-area {
+    flex: 0 0 55px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.flex-row {
+    display: flex;
+    align-items: center;
+}
+
+.check-area {
+    min-height: 130px;
+    height: 100%;
+    display: flex;
+    font-size: 1.1em;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.comment-area {
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 15px 0 15px;
+    height: 100%;
+}
+
+.edit-area {
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 15px 0 15px;
+    height: 100%;
+}
+
+.instructions-area {
+    padding: 5px;
+    text-align: center;
+    overflow: auto;
+}
+
+.no-selection-needed {
+    color: "var(--accent-color)";
+}
+
+.bible-heading-container {
+    width: 100%;
+    height: 100%;
+}
+
+.verse-row-container {
+    /* overflow-y: scroll;
+    overflow-x: scroll; */
+}
+
+svg > text {
+    font-size: 1rem !important;
+}
+
+.edit-icon {
+    color: #ffffff;
+    width: 25;
+    height: 25;
+    margin-right: 5;
+    margin-bottom: 5;
+    vertical-align: middle;
+}
+
+.stepper-body {
+    padding: 0;
+}
+
+.screen {
+    padding: 24px;
+}
+
+.stepper {
+    border-bottom: solid 1px #999;
+    height: 50px;
+}
+
+.actions {
+    padding: 0 24px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.done-icon {
+    color: #ffffff;
+    width: 20;
+    height: 20;
+    margin-right: 5;
+    margin-bottom: 5;
+    vertical-align: middle;
+}
+
+.reasons-screen {
+    display: flex;
+    justify-content: center;
+}
+
+.reasons-screen-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.edit-screen {
+    width: 100%;
+    resize: none;
+    padding: 10px;
+    border: solid 1px var(--border-color);
+    font-style: inherit;
+    font-variant: inherit;
+    font-weight: inherit;
+    font-stretch: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    font-family: inherit;
+    cursor: inherit;
+    outline: none;
+    background-color: transparent;
+    -webkit-appearance: textfield;
+    color: rgba(0, 0, 0, 0.870588);
+}
+
+.add-bible-button-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 130px;
+    min-width: 240px;
+    flex-direction: column;
+    border-right: 1px solid var(--border-color);
+}
+
+.scripture-pane-container {
+    flex: 1;
+    height: 100%;
+    margin: 10px;
+    box-shadow: 0 3px 10px var(--background-color);
+    border-radius: 2px;
+    overflow: auto;
+}
+
+.inner-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.title-bar {
+    flex: 0 0 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    color: var(--reverse-color);
+    background-color: var(--accent-color-dark);
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.panes-container {
+    flex: 1;
+    display: flex;
+    overflow-x: auto;
+}
+
