--- a/webview-ui/src/css/styles.css
+++ b/webview-ui/src/css/styles.css
@@ -1338,3 +1338,146 @@ svg > text {
     flex:auto;
     display: flex;
 }
+
+.handleIcon {
+    z-index: 999;
+    color: var(--reverse-color);
+    background-color: var(--text-color-dark);
+    padding: 10px 0px;
+    border-radius: 5px 0px 0px 5px
+}
+
+.linkActive {
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bold;
+    margin: 5px 20px;
+    cursor: pointer
+}
+
+.linkInactive {
+    display: none;
+    font-weight: bold;
+    margin: 5px 20px;
+    text-align: right;
+    cursor: default;
+}
+
+.checkInfo {
+    flex: 0 0 120px;
+    display: flex;
+    margin: 0 10px;
+    color: var(--reverse-color);
+    background-color: var(--accent-color-dark);
+    box-shadow: 0 3px 10px var(--background-color);
+    border-radius: 2px;
+}
+
+.leftSide {
+    flex: 1 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rightSide {
+    flex: 2 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 10px;
+    border-left: 1px solid var(--reverse-color);
+}
+
+.title {
+    max-height: 100px;
+    overflow-y: auto;
+    padding: 0 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.phrase {
+    max-height: 80px;
+    overflow-y: auto;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.phrase a,
+.phrase a:active,
+.phrase a:link,
+.phrase a:visited {
+    color: #3FB7FA;
+    white-space: nowrap;
+}
+.phrase a:hover {
+    color: #3FB7FA;
+    text-decoration: underline;
+}
+
+.verse-check {
+    margin: 10px;
+    height: 100%;
+    display: flex;
+    flex-grow: 1;
+}
+
+.verse-check-flex {
+    display:flex;
+    flex-direction:column;
+    height: 100%;
+    width:100%;
+}
+
+.verse-check .ltr-content {
+    direction: ltr;
+    flex: auto;
+    padding: 0 15px 10px;
+    overflow-y: auto;
+}
+.verse-check .rtl-content {
+    direction: rtl;
+    flex: auto;
+    padding: 0 15px 10px;
+    overflow-y: auto;
+}
+.verse-title-title {
+    font-weight: bold;
+}
+.verse-title-subtitle {
+    color: var(--text-color-light);
+}
+
+.verse-check-card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 3px 10px var(--background-color);
+    border-radius: 2px;
+}
+.verse-check .title-bar {
+    flex: 0 0 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    color: var(--reverse-color);
+    background-color: var(--accent-color-dark);
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.verse-title {
+    flex: 0 0 45px;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 0px 5px 15px;
+}
+
+.selection-area-root {
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+}
